--- a/packages/api-generator/src/locale/en/v-carousel.json
+++ b/packages/api-generator/src/locale/en/v-carousel.json
@@ -14,7 +14,6 @@
     "progressColor": "Applies specified color to progress bar.",
     "showArrows": "Displays arrows for next/previous navigation.",
     "showArrowsOnHover": "Displays navigation arrows only when the carousel is hovered over.",
-    "verticalDelimiters": "Displays carousel delimiters vertically.",
-    "height": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/master/packages/api-generator/src/locale/en/v-carousel.json))"
+    "verticalDelimiters": "Displays carousel delimiters vertically."
   }
 }
