--- a/packages/api-generator/src/locale/en/v-expansion-panel.json
+++ b/packages/api-generator/src/locale/en/v-expansion-panel.json
@@ -7,7 +7,6 @@
   },
   "events": {
     "change": "Toggles the value of the selected panel",
-    "click": "Mouse click event",
-    "group:selected": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/master/packages/api-generator/src/locale/en/v-expansion-panel.json))"
+    "click": "Mouse click event"
   }
 }
