--- a/packages/api-generator/src/locale/en/v-badge.json
+++ b/packages/api-generator/src/locale/en/v-badge.json
@@ -10,7 +10,7 @@
     "overlap": "Overlaps the slotted content on top of the component.",
     "max": "Sets the maximum number allowed when using the **content** prop with a `number` like value. If the content number exceeds the maximum value, a `+` suffix is added.",
     "location": "Changes the location of the badge. Possible values are **top**, **bottom**, **start**, **end**, **top start**, **top end**, **bottom start**, **bottom end**.",
-    "floating": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/master/packages/api-generator/src/locale/en/v-badge.json))"
+    "floating": "Elevates the badge above the slotted content."
   },
   "slots": {
     "badge": "The slot used for the badge's content."
