--- a/packages/api-generator/src/locale/en/v-bottom-navigation.json
+++ b/packages/api-generator/src/locale/en/v-bottom-navigation.json
@@ -1,7 +1,6 @@
 {
   "props": {
-    "grow": "Force [v-btn](/components/buttons)s to take up all available space.",
-    "mode": "Changes the orientation and active state styling of the component. Available options are **horizontal** and **shift**.",
-    "height": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/master/packages/api-generator/src/locale/en/v-bottom-navigation.json))"
+    "grow": "Force all [v-btn](/components/buttons) children to take up all available horizontal space.",
+    "mode": "Changes the orientation and active state styling of the component."
   }
 }
