--- a/packages/api-generator/src/locale/en/v-card.json
+++ b/packages/api-generator/src/locale/en/v-card.json
@@ -3,10 +3,7 @@
     "flat": "Removes the card's elevation.",
     "hover": "Applies **4dp** of elevation when hovered (default 2dp). You can find more information on the [elevation page](/styles/elevation).",
     "image": "Apply a specific background image to the component.",
-    "prependIcon": "Prepends a [v-icon](/components/icons/) component to the header",
-    "subtitle": "Generates a `v-card-subtitle` component with the supplied value",
-    "title": "Generates a `v-card-title` component with the supplied value",
-    "link": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/master/packages/api-generator/src/locale/en/v-card.json))"
+    "prependIcon": "Prepends a [v-icon](/components/icons/) component to the header"
   },
   "events": {
     "click": "Emitted when component is clicked - Will trigger component to ripple when clicked unless the `.native` modifier is used"
