--- a/packages/api-generator/src/locale/en/v-snackbar.json
+++ b/packages/api-generator/src/locale/en/v-snackbar.json
@@ -4,13 +4,10 @@
     "centered": "Positions the snackbar in the center of the screen, (x and y axis).",
     "multiLine": "Gives the snackbar a larger minimum height.",
     "timeout": "Time (in milliseconds) to wait until snackbar is automatically hidden.  Use `-1` to keep open indefinitely (`0` in version < 2.3 ). It is recommended for this number to be between `4000` and `10000`. Changes to this property will reset the timeout.",
-    "transition": "Sets the component transition. Can be one of the [built in transitions](/styles/transitions) or one your own.",
     "vertical": "Stacks snackbar content on top of the actions (button)."
   },
   "slots": {
-    "actions": "Used to bind styles to [v-btn](/components/buttons) to match MD2 specification.",
-    "activator": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/master/packages/api-generator/src/locale/en/v-snackbar.json))",
-    "default": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/master/packages/api-generator/src/locale/en/v-snackbar.json))"
+    "actions": "Used to bind styles to [v-btn](/components/buttons) to match MD2 specification."
   },
   "exposed": {
     "activatorEl": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/master/packages/api-generator/src/locale/en/v-snackbar.json))",
