--- a/packages/api-generator/src/locale/en/v-timeline-item.json
+++ b/packages/api-generator/src/locale/en/v-timeline-item.json
@@ -11,8 +11,7 @@
     "side": "Show the item either **before** or **after** the timeline. This will override the implicit ordering of items, but will in turn be overriden by the `v-timeline` **single-side** prop",
     "size": "Size of the item dot",
     "dotColor": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/master/packages/api-generator/src/locale/en/v-timeline-item.json))",
-    "lineInset": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/master/packages/api-generator/src/locale/en/v-timeline-item.json))",
-    "density": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/master/packages/api-generator/src/locale/en/v-timeline-item.json))"
+    "lineInset": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/master/packages/api-generator/src/locale/en/v-timeline-item.json))"
   },
   "slots": {
     "icon": "Used to customize the icon inside the item dot",
