docs: add "coming soon" to language menu

--- a/packages/docs/src/i18n/messages/en.json
+++ b/packages/docs/src/i18n/messages/en.json
@@ -135,6 +135,7 @@
   "missing": "Could not load example `{file}`",
   "mit-license": "MIT License",
   "mixed": "Mixed",
+  "more-coming-soon": "More coming soon...",
   "new": "New",
   "newsletter": "Newsletter",
   "notifications": "Notifications",
