docs(nav): update styles and animations links

--- a/packages/docs/src/i18n/messages/en.json
+++ b/packages/docs/src/i18n/messages/en.json
@@ -225,6 +225,7 @@
   "upgrade-guide": "Upgrade guide",
   "unread": "View Unread ({number})",
   "updated": "Updated",
+  "utility-classes": "Utility classes",
   "video-courses": "Video courses",
   "view-in-github": "View on GitHub",
   "view-source": "View source",
