docs(nav): update component ordering, add headings

--- a/packages/docs/src/i18n/messages/en.json
+++ b/packages/docs/src/i18n/messages/en.json
@@ -54,6 +54,7 @@
   "component": "Component",
   "components": "Components",
   "contents": "Contents",
+  "containment": "Containment",
   "contribute": {
     "edit-page": "Edit this page on {url}",
     "last-updated": "Last updated:"
@@ -67,6 +68,8 @@
   "customization": "Customization",
   "dark": "Dark",
   "data-tables": "Data tables",
+  "data-and-display": "Data & display",
+  "grids": "Grids",
   "desktop": "Desktop",
   "details": "Details",
   "device": "Device",
@@ -91,6 +94,7 @@
   "extra-small": "Extra small",
   "feature-guides": "Feature guides",
   "features": "Features",
+  "feedback": "Feedback",
   "file-a-bug-report": "File a bug report",
   "focus": "Focus",
   "for-enterprise": "For Enterprise",
@@ -109,6 +113,7 @@
   "help-and-support": "Help and support",
   "hide-source": "Hide source",
   "homepage": "Vuetify Home Page",
+  "images-and-icons": "Images & icons",
   "inline": "Inline",
   "introduction": "Introduction",
   "invert-example-colors": "Invert example colors",
@@ -132,10 +137,12 @@
   "marked-unread": "Mark all unread",
   "md": "Material Design",
   "medium": "Medium",
+  "miscellaneous": "Miscellaneous",
   "missing": "Could not load example `{file}`",
   "mit-license": "MIT License",
   "mixed": "Mixed",
   "more-coming-soon": "More coming soon...",
+  "navigation": "Navigation",
   "new": "New",
   "newsletter": "Newsletter",
   "notifications": "Notifications",
@@ -189,6 +196,7 @@
   "search-jobs": "Search Jobs",
   "search-sass-api": "Search SASS Variables",
   "section": "Section",
+  "selection": "Selection",
   "services": "Services",
   "settings": "Settings",
   "small": "Small",
