--- a/packages/api-generator/src/locale/en/v-defaults-provider.json
+++ b/packages/api-generator/src/locale/en/v-defaults-provider.json
@@ -1,8 +1,9 @@
 {
   "props": {
     "defaults": "Specify new default prop values for components. Keep in mind that this will be merged with previously defined values",
-    "reset": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/master/packages/api-generator/src/locale/en/v-defaults-provider.json))",
-    "root": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/master/packages/api-generator/src/locale/en/v-defaults-provider.json))",
-    "scoped": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/master/packages/api-generator/src/locale/en/v-defaults-provider.json))"
+    "disabled": "Turns off all calcuations of new default values for improved performance in situations where defaults propagation isn't necessary",
+    "reset": "Reset the default values up the nested chain by {n} amount",
+    "root": "Force current defaults to match the application root defaults",
+    "scoped": "Prevents the ability for default values to be inherited from parent components"
   }
 }
