docs: add basic support for example playground links

--- a/packages/docs/src/i18n/messages/en.json
+++ b/packages/docs/src/i18n/messages/en.json
@@ -86,6 +86,7 @@
   "discord": "Discord",
   "done": "All done",
   "edit-in-codepen": "Edit in Codepen",
+  "edit-in-playground": "Edit in Vuetify Playground",
   "edit-this-page": "Edit this page on",
   "edit": "Edit",
   "enterprise": "Enterprise",
