--- a/packages/api-generator/src/locale/en/v-input.json
+++ b/packages/api-generator/src/locale/en/v-input.json
@@ -6,9 +6,9 @@
     "hideSpinButtons": "Hides spin buttons on the input when type is set to `number`.",
     "dense": "Reduces the input height",
     "height": "Sets the height of the input",
-    "hint": "Hint text",
+    "hint": "Displays hint text below the input when focused. Force this always open with the [persistent-hint](#props-persistent-hint) property",
     "loading": "Displays linear progress bar. Can either be a String which specifies which color is applied to the progress bar (any material color or theme color - **primary**, **secondary**, **success**, **info**, **warning**, **error**) or a Boolean which uses the component **color** (set by color prop - if it's supported by the component) or the primary color",
-    "persistentHint": "Forces hint to always be visible",
+    "persistentHint": "Forces [hint](#props-hint) to always be visible",
     "placeholder": "Sets the input's placeholder text",
     "prependIcon": "Prepends an icon to the component, uses the same syntax as `v-icon`",
     "required": "Designates the input as required; Adds an asterisk to the end of the label; Does not perform any validation.",
