docs(VSelectionControl): use generic API descriptions (#16780)

--- a/packages/api-generator/src/locale/en/v-selection-control.json
+++ b/packages/api-generator/src/locale/en/v-selection-control.json
@@ -1,9 +1,5 @@
 {
-  "props": {
-    "trueValue": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/master/packages/api-generator/src/locale/en/v-selection-control.json))",
-    "falseValue": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/master/packages/api-generator/src/locale/en/v-selection-control.json))",
-    "value": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/master/packages/api-generator/src/locale/en/v-selection-control.json))"
-  },
+  "props": {},
   "slots": {
     "input": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/master/packages/api-generator/src/locale/en/v-selection-control.json))"
   },
