--- a/packages/api-generator/src/locale/en/v-input.json
+++ b/packages/api-generator/src/locale/en/v-input.json
@@ -1,7 +1,7 @@
 {
   "props": {
     "backgroundColor": "Changes the background-color of the input",
-    "dark": "Applies the dark theme variant to the component. This will default the components color to _white_ unless you've configured your [application theme](/customization/theme) to **dark** or if you are using the **color** prop on the component. You can find more information on the Material Design documentation for [dark themes](https://material.io/design/color/dark-theme.html).",
+    "direction": "Changes the direction of the input",
     "hideDetails": "Hides hint and validation errors. When set to `auto` messages will be rendered only if there's a message (hint, error message, counter value etc) to display",
     "hideSpinButtons": "Hides spin buttons on the input when type is set to `number`.",
     "dense": "Reduces the input height",
@@ -16,8 +16,7 @@
     "toggleKeys": "Array of key codes that will toggle the input (if it supports toggling)",
     "value": "The input's value",
     "id": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/master/packages/api-generator/src/locale/en/v-input.json))",
-    "messages": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/master/packages/api-generator/src/locale/en/v-input.json))",
-    "direction": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/master/packages/api-generator/src/locale/en/v-input.json))"
+    "messages": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/master/packages/api-generator/src/locale/en/v-input.json))"
   },
   "events": {
     "change": "Emitted when the input is changed by user interaction",
