--- a/packages/api-generator/src/locale/en/v-selection-control-group.json
+++ b/packages/api-generator/src/locale/en/v-selection-control-group.json
@@ -1,13 +1,13 @@
 {
   "props": {
     "id": "Sets the DOM id on the component",
-    "type": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/master/packages/api-generator/src/locale/en/v-selection-control-group.json))",
     "error": "Puts the input in a manual error state",
     "readonly": "Puts input in readonly state",
-    "inline": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/master/packages/api-generator/src/locale/en/v-selection-control-group.json))",
+    "inline": "Puts children inputs into a row.",
+    "type": "Provides the default type for children selection controls.",
     "falseIcon": "The icon used when inactive",
     "trueIcon": "The icon used when active",
     "multiple": "Changes select to multiple. Accepts array for value",
-    "defaultsTarget": "MISSING DESCRIPTION ([edit in github](https://github.com/vuetifyjs/vuetify/tree/master/packages/api-generator/src/locale/en/v-selection-control-group.json))"
+    "defaultsTarget": "The target component to provide defaults values for."
   }
 }
