--- a/packages/api-generator/src/locale/en/v-color-picker.json
+++ b/packages/api-generator/src/locale/en/v-color-picker.json
@@ -13,7 +13,7 @@
     "swatches": "Sets the available color swatches to select from. 2D array of rows and columns, accepts any color format the picker does",
     "swatchesMaxHeight": "Sets the maximum height of the swatches section",
     "value": "Current color. This can be either a string representing a hex color, or an object representing a RGBA, HSLA, or HSVA value",
-    "width": "Sets the width of the color picker",
+    "width": "Sets the width of the color picker"
   },
   "events": {
     "input": "Selected color. Depending on what you passed to the `value` prop this is either a string or an object",
