feat(VAutocomplete/Combobox): add auto-select-first prop (#17257)
fixes #9270
closes #13788
closes #15528
closes #16508

Co-authored-by: Kael <kaelwd@gmail.com>

--- a/packages/api-generator/src/locale/en/v-combobox.json
+++ b/packages/api-generator/src/locale/en/v-combobox.json
@@ -1,5 +1,6 @@
 {
   "props": {
+    "autoSelectFirst": "When searching, will always highlight the first option and select it on blur. `exact` will only highlight and select exact matches.",
     "delimiters": "Accepts an array of strings that will trigger a new tag when typing. Does not replace the normal Tab and Enter keys."
   },
   "exposed": {
