--- a/packages/api-generator/src/locale/en/v-field.json
+++ b/packages/api-generator/src/locale/en/v-field.json
@@ -4,6 +4,7 @@
     "baseColor": "Sets the color of the input when it is not focused",
     "reverse": "Reverses the orientation ",
     "error": "Puts the input in a manual error state",
+    "centerAffix": "Vertically align **appendInner**, **prependInner**, **clearIcon** and **label** in the center",
     "clearIcon": "The icon used when the **clerable** prop is set to true",
     "disabled": "Removes the ability to click or target the input",
     "persistentClear": "Always show the clearable icon when the input is dirty (By default it only shows on hover)",
