docs: add composition api to examples (#17178)
Co-authored-by: Kael <kaelwd@gmail.com>

--- a/packages/docs/src/i18n/messages/en.json
+++ b/packages/docs/src/i18n/messages/en.json
@@ -39,7 +39,7 @@
   "cancel": "Cancel",
   "close": "Close",
   "code": "Code",
-  "codepen-template": "Codepen template",
+  "composition": "Composition",
   "copied": "Copied!",
   "copy-link": "Copy link",
   "company": "Company",
@@ -87,7 +87,6 @@
   "direct-support": "Direct support",
   "discord": "Discord",
   "done": "All done",
-  "edit-in-codepen": "Edit in Codepen",
   "edit-in-playground": "Edit in Vuetify Playground",
   "edit-this-page": "Edit this page on",
   "edit": "Edit",
