docs(Markup/Example): add copy all btn, general cleanup

--- a/packages/docs/src/i18n/messages/en.json
+++ b/packages/docs/src/i18n/messages/en.json
@@ -67,6 +67,7 @@
   "contact-us": "Contact Us",
   "cookie-policy": "Cookie Policy",
   "copy-example-source": "Copy example source",
+  "copy-source": "Copy source",
   "copyright": "Copyright {0}",
   "customization": "Customization",
   "dark": "Dark",
