docs: update promotions and add fallback

--- a/packages/docs/src/i18n/messages/en.json
+++ b/packages/docs/src/i18n/messages/en.json
@@ -108,6 +108,7 @@
   "functional": "Functional",
   "funding": "Funding",
   "getting-started": "Getting started",
+  "get-help": "Get help",
   "github": "GitHub",
   "github-discussions": "GitHub discussions",
   "github-issues": "GitHub issues",
