docs(AppDrawer/Settings): remove github login, other tweaks

--- a/packages/docs/src/i18n/messages/en.json
+++ b/packages/docs/src/i18n/messages/en.json
@@ -35,6 +35,7 @@
     "spec": "Specification"
   },
   "breakpoints": "Breakpoints",
+  "documentation-build": "Documentation Build",
   "business": "Business",
   "cancel": "Cancel",
   "close": "Close",
