--- a/packages/docs/src/i18n/messages/en.json
+++ b/packages/docs/src/i18n/messages/en.json
@@ -76,6 +76,7 @@
   "data-and-display": "Data & display",
   "grids": "Grids",
   "details": "Details",
+  "developer-mode": "Developer Mode",
   "device": "Device",
   "direction": "Direction",
   "directive": "Directive",
