docs: update Twitter social links to X

--- a/packages/docs/src/i18n/messages/en.json
+++ b/packages/docs/src/i18n/messages/en.json
@@ -249,5 +249,6 @@
   "view-in-github": "View on GitHub",
   "view-source": "View source",
   "viewport": "Viewport",
-  "vuetify": "Vuetify"
+  "vuetify": "Vuetify",
+  "x": "X"
 }
