docs(EcosystemMenu): add link for pastebin

--- a/packages/docs/src/i18n/messages/en.json
+++ b/packages/docs/src/i18n/messages/en.json
@@ -162,6 +162,7 @@
   "overlays": "Overlays",
   "overview": "Overview",
   "output": "Output",
+  "pastebin": "Pastebin",
   "page": "Page",
   "phone": "Phone",
   "pickers": "Pickers",
