docs(brand-kit): add new page

--- a/packages/docs/src/i18n/messages/en.json
+++ b/packages/docs/src/i18n/messages/en.json
@@ -25,6 +25,7 @@
   "apply": "Apply",
   "bars": "Bars",
   "become-a-sponsor": "Become a sponsor",
+  "brand-kit": "Brand Kit",
   "breakpoints-table": {
     "caption": "Material Design Breakpoints",
     "small-to-large-handset": "Small to large phone",
@@ -41,6 +42,7 @@
   "cancel": "Cancel",
   "close": "Close",
   "code": "Code",
+  "colors": "Colors",
   "composition": "Composition",
   "copied": "Copied!",
   "copy-link": "Copy link",
@@ -88,6 +90,7 @@
   "discussions": "Discussions",
   "documentation": "Documentation",
   "documentation-status": "Documentation status",
+  "download-brand-kit": "Download Brand Kit",
   "drawer-navigation-grouping": "Drawer navigation grouping",
   "direct-support": "Direct support",
   "discord": "Discord",
@@ -123,6 +126,7 @@
   "help-and-support": "Help and support",
   "hide-source": "Hide source",
   "homepage": "Vuetify Home Page",
+  "icon": "Icon",
   "images-and-icons": "Images & icons",
   "inline": "Inline",
   "introduction": "Introduction",
@@ -142,7 +146,7 @@
   "light": "Light",
   "link-only": "Link Only",
   "load-more": "Load more...",
-  "logo": "Vuetify Logo",
+  "logo": "Logo",
   "ltr": "LTR",
   "marked-read": "Mark all read",
   "marked-unread": "Mark all unread",
@@ -229,6 +233,7 @@
   "tablet": "Tablet",
   "team": "Team",
   "template": "Template",
+  "text": "Text",
   "theme": "Theme",
   "themes": "Themes",
   "tidelift": {
